--- a/View/UI/ViewCaixa/frmReceberFiado.resx
+++ b/View/UI/ViewCaixa/frmReceberFiado.resx
@@ -241,6 +241,92 @@
         gg==
 </value>
   </data>
+  <data name="ptbTroco.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAABKrSURBVGhDvVkJXJR1/u6/1f53t7bcbCtTS80TNdM8SrvN0q1M06wsj0xNDa1UQLlMBEFAUOQS
+        ROJGQE655b7vc7jvazgHBhiH02efd2Y03GxNq/1+Pt/PDDPD+3u+v9/3eJ73ve+PNLlcPnVoaGgHXw35
+        mjQwMJB8/fr1HoyxwcHBYn6fQg/t6ekxqaurWxMUFPQk//1Pyqv8j42Yxg0PDx8cHR0tUEK8N+vr64to
+        bm7+hpf8K/2PD4ZrCsAN/nOHf6vxhJpEItF2LvE3+h8TCNNjIYHXqda8aSOyVsjqotFb5IDulCO4lnUU
+        0oj3IY38gL4WfbGbcS1bF9J0bcjKPXGtORWjQ/2q/77Vurq6rmpoaDzH5R5Urvo7mQr8LbsugG6LUYc4
+        8D1I4zZjIHM3RvLVcT1/L5D7FZC3E6j8DhAfAyQngXZjoO4ERvL2Qxa7EX25xhjoKFRd7Sfr7e2t4JIT
+        6X9WLP572NhcFxZtDN2OtmRN9BacwPVaU6DeDKghyKofgLKjQPH3gGg/0GyOvgZfQBpKdwZ63HiBTEBe
+        CjT5YCRjJ6QZeopTHGt5eXkXuexT9PsVAH6LjYyMfKm6rmLXK73WoCtTh1t1CejwAlpsCOYs0GAO1DKI
+        CgZQroPuchf0VrkDbefRI9KDOM8GokRrlMXx+w4GI2cgg8kM3IgnuB1DPdWqVQCeeP+bb775Opf/uxLF
+        PZqQOtz9euGiQt7WXN6I9nQd9NW7EJgJdzQEaHXke/7dTlBietVxyKvsgZKD9ANMG31+fg6D1Ub8LV3i
+        irzos2gttgM6zxEtN6JSmyfB340xMzMzDUJ4mn5vRS3097F5L6SOOPQz9JcRYFsU5PXnMNDkBGk9QY+k
+        o18SgUFZLGTNlzEk9oe85iLktRchLjiPtnwLnpAu5E0uyA4xYIAMpJ2pJ3FCTwOD77TBtcQtqpWUlpCQ
+        cIkwZtH/XwHobo2pk6C6lqJzNAR+jN6U/ZCU26M69SRa8kwgb3BFZ4k1eqpsIe/0h6wrFHJJEEb6gtBT
+        aYqOfG0M57Goq5hezdYoj9JgmrFOWk+xJgLRVOCA4RZbpqAVeqI/Ua2mtNjYWD/CeIH+kALQ3ZiQOqrr
+        KHZeyPu2xAPoCN/IlGDK1LJo689CXkFgbZ50FmenH3fdCvJGZ3TX/YiB3nBIqq1ZC4boK9fFQKMjuivd
+        UJLAWoi1QHWSAYa6A3gSp1n0h5Bv95pqRaWpAniRfvd1QDpwSHUdNIV9hea4/QpwreFvYzBfF8OVBJ9/
+        ELJiA7QVniNAW3TknGBwZhioY0o12aK/iqlT5oI2fjcotkJ7gTYkRVooubJb2bWEne/2YcHrodH3bRTY
+        r1CtqLTfFIBMJmOSKq0z6gvIqrizdXboSliH3pxvMFTBrtPBDJNksBvF4Vq9E/pKz2G45gK6iqzRmrwf
+        Lak6aEozRluaDpojt6AiYjdEYXuAanYq1g5aAzGUp4Vqj9dR5PA88hzfUK2oNH19fQNCubcU6u/v5ypK
+        k8Zuw1ANAUv9IUnehvak3bhWdQG9lS4YEMdhdKALGO4lsRFhoJ4pwcKFOIw7HESg7DB1Tjw1obWyazFA
+        NPmjI9cBeZ5bkWQxF5l2S1BwfiGKglkbY2zu3LlbCeXeinhsADXeb7O3c/EuDwzVW6Pl6k50ZelAWu4O
+        aUMqeuvDMcCUkmQf42A7ic5UtsQCKx6OITpTdFAT9CWynT5AvttHyHd9B2EGM+H23RMI1puEuFPTkWAy
+        G7FmL6Nb5KFaUWnq6urfE8pU+gMKUHdjYwNoDnkDsqx9zFsee4cHRru80Z2tg5a4gxBnnUFHiQdG6u0I
+        eA96Uv6F/tSVqPJdgGLXGUg9pwY/rUcQajgbl7TGI9NpIa4cfxYe3z8FP42n4a05B5kebAxNP0Aaf3Ne
+        KszW1taEUO6NF0kkkq9V14E4ahP62QplIgOMNF1m4Qm5H4rRekv0s6Bb4g+hLW43WsLXQnxlCSQxK1Dh
+        NR9FLtORYqUGH42HEaQ3HW4HHkGwwWzY750C613TEHpyKbLPr4A0ZgNP+BBfP1WtqLT4+HgfQlGj/0UB
+        6m5MEBucA0xspn6ZF4v3U3TlnYS0yhuyxjCMdOdgUFLCAiZFag/GaJMn5MXGaE3UQHP0LpT6bESK/RpE
+        nVmNWNuNiLD6FD8eeRXuh2ci/MQsJJrPRMGFl5Fly86TxhPI+AKN/msVwG+YqgstpD+sAPVrTZjAVE1v
+        s5WKVNdCT/GPaIzYweIzQ29DPGdDDvrKzqEt4Uv0Z++FOPITvj9A8HtQGbAFIs91iDVfjjCjBUi2egEB
+        OhNwWWcygvUnIcqQQeg/g0TLVzCU/DED2KQYYvHGi1WrKe1Xt1H+dhwH1w4KleD/JlS6i5whjt6Ghjhd
+        dBY7QFpsBknOYc6DzyFNXYPawAWo8luAVOvpiDj5JEFPhp/uRGQ4LiHwCfDRnAj3AxPhpamGikvc7ezt
+        9J3ojlyHArsXkWn9smolpd0xAGGnmSYkIr/Oeko8IY5Yg860b9GT/QPa4vejKWond389mgOXoZQ5X3Rx
+        BjvLZAQcfYxg/wmHvU/DXXMmnL5XwxXTt1AR8AUJni5bGzeg8DxKXFci/cxslP64BDl2dzHIBD17u92+
+        RV2lHoEs8yj6k766qa56qLQ6IzeiP/cYuvPOQlrhg65ST3SSsFVeNURxmAEKrpxAlt9RNCSZovaqPuR5
+        FDSlJ9CbfQLieC2UBuxG0PGFCNKZiCRLNUUAKRYvIM3qVRUKpf1iAP+56wJN7qsM5O5+idag99CbuJWD
+        Zz9GSg7husDtK7Q4PQ3JJvm+k3ShlQOn4Tj7qwuGqlzRmnsBZdG6uGyyGMl2c0j6OJgcZyPXYQGijGbA
+        ec/f4MuWeenweKQwvUJPTGUaTeIcmIywY9MQdnwBcsmDks1/RQ0IO6/6XmG9BF5PltnK3JaXGrBnkseT
+        NaLNmjTZF22lrmgudkZmqDlaMjVZCG7orI7ASLs3BUkKrl+XcwpLGVQ4ZNS9UTb/grOeGrvPHA6t2Ui3
+        ex6+Rx5FoO7T8Ds6Hklnp+Gy1gTY7HgSbkeWodBtA2q93iAPWsQaWK5CpbSfBcDPxo1Nm64sC1T5fIj+
+        Uk7ZDkGgcMwLAYjPs8+HkCK7YriZfzdyx5ssCZKzresC6uK0SRf0WBSXMCxr4G/TKdXYTmXRGM37BqXu
+        K2G89XE4HuCw0nkOTvsmwG7fHHgcXYRA07VI89ZEZexpFPvtQerZ55HBWVHstAQZ1ndIIaHTqL5TUORy
+        jzUkaWcUFOGWAOqMGNRJDFYScA1VUo0mxIXOGKwi8FYblIQKnJ6p1PUjpM0JGCw6gdFCno7AMPsdMZq9
+        G/F2q+BhuAoZbltRH/Y16q7sRK7LBhR7rWWHmg/XA+MR8sOz5EJzkGxGKnFqKZLMX1KhU9rPAmDXYSIr
+        TVbpg/ZkApHFcQeZDmMDaHXHSKMrp64r04mqqikQ5bGGGCw35u98ORMIVOwEeWs0kr1ZH0WHgczPOYw2
+        83MGVq2Fcq/VMNj8d9jsmwiHPQ8hUEdIoceRYjuDNTANnocnIeAIW+qh6ciwW0ktsAzpZ5eq0CntZwGM
+        5Tf97B7yAu6u1I+p4Msg/FmgDEQWCVxPRxfloIzgZS3OuNZ4hr8/QRl4HK3ZGhhosCCRO43q2D0oCxFu
+        n1BxCQEIdyTkV4CsHegK24Ayz1Uw2zkBJp//lTNgArwOjkO44TNwVJ8C22+eR4qbOjX2x8izJW9iCt2x
+        BsYG0J7jCHn6fgw2XcRgI6lyty/17Xl0V9tD3n6JwD3QU32eTPMiJ68LpKQKEgqVNk7f5nxDVJDINWUx
+        tTIPQxJL8EIA6ZSEqRsxnLoVxe4fAqLvGcRqHPt8Gmy/W4xo+23UA8dQG2uEQj91xJx+CYmn5yhqIMd2
+        EVIs7yIACalBZ9RqjAqSsMUFhZE/oCXHkELdmVqXXaiVddFoRbfhyYSyiO2YTg58HwJxsRdKg7nrJUeA
+        XE7SmM+UAWRuwfWMbSi0fwkNIaQIAw4YzWHPN1wM8x1T4Ks3HzGmz5KNToHHoacUNZBgOou0YjpSrV6/
+        M5WgyiIapXUVu6MndR0GRVqkwtSzXalMJ6orMQVIhR4V1ylyHRsOI30MVlgybQIgTjdAfZIh+ZsJrpWc
+        RnP8t0DBAQoVCvRaJ/Qn7kAxaUPJxcWo8HiXn1GVMr08tefj8AcPwXT7o4ixmMYApsJ53+PUBFNwxWgF
+        p/GqO1MJgTaoPldYR6Yl2qPWoCv7CK7VssM0+mGgPV15z1LezGAKeQqkzk3unMqmGOaMGCggBRDpMwBz
+        yIsE0FReLcFoSDxFnr8OccbPURYuh4j5XO+7hiSNKZX1FSy2TcT2FX/B/nce5klMgpvu64g8vxeV0Sdv
+        oRJCWx1rt0jKsdO3n1Sh4tKH6M7VRW3wJ+gRALYnorcuBp0iFm2FNfpFpylQ9CArJWfJO8OOpY+OJC1q
+        2z3IcHgPJT6fIf38a4g69Tw8vhuPQE7VBLOZSDJVQ5b9W6yHTfTPUe3+Lqz3TofGpgk4voPt8sKnt6US
+        6edWoKelXIVQcbdaNm/evC0Er5SUN+6uCSZJZvEl83i7vTHYGYDm2G/RlnkSHeQzHSJXyCstucP7IIl7
+        BdKk11B5aSnSrCdRnMyE9+FxCDGYylY4GYk2CxB5So2k7TF4U2EF6c1DfcB61gIJW+Y2NPmtRpH9Qpju
+        mIWPFj6ALcsfhOXuf/ycShivhKT5J/CCRUREBBH4u3TlnTnV5wqTxm1DbyFpQy8FOLLRnnaQdHgzOlK1
+        0JqggdZYtsGY99B6ZTG6ri5RBJBuO5kBzGIrfBT+pMn+R57glJ1CdTUdl4/x+L2pqkSczrUU+1kGyLNf
+        ivzzi1DtuQyH3n8C6xfej01LHlDMhptUQuctlKYFKkGNsfr6+jKC3kQXxIyygFXfKaze9z0WqpHiBIQ7
+        DYN1FOoRG9CRoYG+al+6DzpyTNFwdT9KLm9Dlsd2JF7YjCjrj3HFYj0SnbYjxWUXasLVgTJehycmTjZA
+        ecgBRJstR5D204jndC28sAw+R+dhtdr9WKX2IL5e9yJsj21FWrgbxPW37vgNy83NTVFTU9tByCvowiMo
+        5d1p1fcKq/CkSE/bTUbpyO7jzqIIwZAkEM1X96IlmfS5LhBDnXnoLHJinWjxt+vQcXUdGq58SMHyPk9j
+        OdJsXkaU8QKKlqmINplJ0U6NSw/QfZYBTECY3hQkXfgKQ3KFKr2jSaXSTnNzcytCXU9fRhdS56fnA6rf
+        Kawxcgu6kzdiRLhV0so06vBhYXjhepcXJy4HVcJRSkcLiFP1Ick+hFHRVnTGvE41tgI1gUuRajMVCWem
+        kmU+QZE+BXEWsxFuPB3+2pyyX0+Aq9arKEsPUa32yyYUanl5ea6FhcUZQtxAf4suiPjx9FvvRAhPCVX/
+        x67jgPb4j9FdYIhr1Rcw2hGD0f5qoC+XwfhhqNkZsvyj6Ms6TNDbWZjvoJp1IHJZgBzHRYgymYGgY8/h
+        ovok2O+eAOs9M2CvPh2XtOcihXymszZHtZLShN0V8rqxsbE0Pz8/yd/f313VIj+ir6YL6SIAFx5o3P4Z
+        GUU6WZrShF7flvAd1dFe5rs7SVkaBlrC0FPqjP4qT8irvdBHHQBxMNOMrzW2GCg0oqjfh1y3zchy2YQw
+        k+Xw0JjKlHkOIRTqCeZzkGahhqJw0u4xpuomn9LX0N+kv0Z/iS709xl0IVX+QRdunfzycwBOtbk3bpMI
+        NjokgyTfnoX6rUKgD7XFQiK6SKFOaizagvbIFaj1m09u/wJiTCZRWT0D74NPUFWNQ4LlHAQfn4BQo+kU
+        KqQIh56Ev/5iVGcFqa6uNC0trVNceh19MX0y/XH6Y/RxdOF+p5Djv/rhxYMikejmHecbNtxbh+5iF7Sn
+        G5EaHGQb3YHB7A/REf0KO9NS1AYw562Z85ZT4afFADTGIdZ8Fvw0H4OT+rNw1nwVacF2GLh2a7EmJydH
+        cU0B/Hy6APg3P+v6P/rDkZGRB4TnT6p1brFhSSlpsh+ak0+gLupb5Lu9jzjLJQg8Ng9uGnNwyWA1vIw3
+        I8xRA8lhHmipu30rVKXNRrrAY4T0uLdHRLcx4UKPampqrqqoqIhSrfe7mVCo2traJ7nGWvoiupAyd39j
+        9g4mBCHcqpuya9eu9RwcQX19fe0qDHdtQivMy8tL1tHRMeI1hZQRinQm/XdJm18yIZ2EAhKOdxp9MU9l
+        j7e3t1VGRkZoU1NTidDyVBhv2h1aodBZBOD/pP/3jvI7mhCIMDAeoQs9WAhGKLql9FfpK+lC+3tf5cJ7
+        4bPbtUJhx4UHEf8T4LezG8EIg0QISGh3wm4KgQkABRfeC5/dcyu8N7vvvn8DK5p1WGFMQA8AAAAASUVO
+        RK5CYII=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAABILAAASCwAAAAAAAAAA
